Fixed clipping of breadcrumb trail Home link in Chrome (related to wet-boew/wet-boew#4005)

--- a/src/sass/_breadcrumbs.scss
+++ b/src/sass/_breadcrumbs.scss
@@ -2,24 +2,24 @@
  Breadcrumbs
  */
 #wb-bc {
-        background: #F5F5F5;
-        .breadcrumb {
-                margin-bottom: 0;
-                border-radius: 0;
-        }
-        li {
-                &:before, &:after {
-                        font-family: "Glyphicons Halflings";
-                        font-size: 0.7em;
-                        color: #000;
-                }
-                &:before {
-                        content: "\e092";
-                }
-                &:first-child {
-                        &:before {
-                                content: "";
-                        }
-                }
-        }
+	background: #F5F5F5;
+	.breadcrumb {
+		margin-bottom: 0;
+		border-radius: 0;
+	}
+	li {
+		&:before, &:after {
+			font-family: "Glyphicons Halflings";
+			font-size: 0.7em;
+			color: #000;
+		}
+		&:before {
+			content: "\e092";
+		}
+		&:first-child {
+			&:before {
+				display: none;
+			}
+		}
+	}
 }
